--- a/hi.html
+++ b/hi.html
@@ -3,6 +3,6 @@
     <title>Hey</title>
 </head>
 <body>
-<p id="greeting">Hello {{user}}!</p>
+<p id="greeting">Hello, {{user}}!</p>
 </body>
 </html>
